# compression-experiments

./: .pre-commit-config.yaml  README.md  compress.py  compress_bnb.py  evaluate.py  evaluate.sh  get_model_stats.py  lm_eval.sh  pyproject.toml  report.md  requirements.txt  setup_env.sh  train.py
