[project]
name = "compression-experiments"
version = "0.1.0"
authors = ["Ailurus"]
description = ""
requires-python = ">=3.12"

dependencies = [
    "pre-commit",
    "torch>=2.6.4",
    "transformers",
    "bitsandbytes",
    "llmcompressor",
    "lm-eval[vllm]==0.4.9.2",
    "compressed-tensors==0.13.0",
]

[project.optional-dependencies]
eval = ["lm-eval[vllm]"]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
